run black formatter

--- a/notes/A-Tale-of-Two-Transducers.ipynb
+++ b/notes/A-Tale-of-Two-Transducers.ipynb
@@ -28,14 +28,14 @@
    "outputs": [],
    "source": [
     "def Delta1(alphabet):\n",
-    "    D = FST(Float)    \n",
+    "    D = FST(Float)\n",
     "    D.add_I(0, 1)\n",
     "    D.add_I(1, 1)\n",
     "    for x in alphabet:\n",
-    "        D.add_arc(0, (x,x), 0, 1)\n",
-    "        D.add_arc(0, (x,x), 1, 1)\n",
-    "        D.add_arc(1, (x,EPSILON), 1, 1)\n",
-    "#    D.add_F(0, 1)\n",
+    "        D.add_arc(0, (x, x), 0, 1)\n",
+    "        D.add_arc(0, (x, x), 1, 1)\n",
+    "        D.add_arc(1, (x, EPSILON), 1, 1)\n",
+    "    #    D.add_F(0, 1)\n",
     "    D.add_F(1, 1)\n",
     "    return D"
    ]
@@ -48,13 +48,13 @@
    "outputs": [],
    "source": [
     "def Delta2(alphabet):\n",
-    "    D = FST(Float)    \n",
+    "    D = FST(Float)\n",
     "    D.add_I(0, 1)\n",
     "    for x in alphabet:\n",
-    "        D.add_arc(0, (x,x), 0, 1)\n",
-    "        D.add_arc(1, (x,EPSILON), 1, 1)\n",
-    "    D.add_arc(0, (EPSILON,EPSILON), 1, 1)\n",
-    "#    D.add_F(0, 1)\n",
+    "        D.add_arc(0, (x, x), 0, 1)\n",
+    "        D.add_arc(1, (x, EPSILON), 1, 1)\n",
+    "    D.add_arc(0, (EPSILON, EPSILON), 1, 1)\n",
+    "    #    D.add_F(0, 1)\n",
     "    D.add_F(1, 1)\n",
     "    return D"
    ]
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "D = Delta('ab')\n",
+    "D = Delta(\"ab\")\n",
     "D"
    ]
   },
@@ -331,7 +331,7 @@
     }
    ],
    "source": [
-    "(D @ WFSA.from_string('ab', Float)).trim"
+    "(D @ WFSA.from_string(\"ab\", Float)).trim"
    ]
   },
   {
@@ -349,12 +349,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg = CFG.from_string(\"\"\"\n",
+    "cfg = CFG.from_string(\n",
+    "    \"\"\"\n",
     "\n",
     "1: S -> a a a a a\n",
     "1: S -> b a\n",
     "\n",
-    "\"\"\", Float)"
+    "\"\"\",\n",
+    "    Float,\n",
+    ")"
    ]
   },
   {
@@ -462,7 +465,7 @@
     }
    ],
    "source": [
-    "(cfg @ Delta1('ab')).nullaryremove(binarize=False).trim()"
+    "(cfg @ Delta1(\"ab\")).nullaryremove(binarize=False).trim()"
    ]
   },
   {
@@ -504,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#PrefixGrammar(cfg).nullaryremove(binarize=False).trim()"
+    "# PrefixGrammar(cfg).nullaryremove(binarize=False).trim()"
    ]
   },
   {
@@ -523,13 +526,13 @@
    "outputs": [],
    "source": [
     "def derivative(string, alphabet):\n",
-    "    D = FST(Float)  \n",
+    "    D = FST(Float)\n",
     "    D.add_I(0, 1)\n",
     "    for i, x in enumerate(string):\n",
-    "        D.add_arc(i, (x,EPSILON), i+1, 1)\n",
+    "        D.add_arc(i, (x, EPSILON), i + 1, 1)\n",
     "    N = len(string)\n",
     "    for x in alphabet:\n",
-    "        D.add_arc(N, (x,x), N, 1)\n",
+    "        D.add_arc(N, (x, x), N, 1)\n",
     "    D.add_F(N, 1)\n",
     "    return D"
    ]
@@ -661,7 +664,7 @@
     }
    ],
    "source": [
-    "derivative('ab', 'ab').graphviz(fmt_node=lambda x: str(x))"
+    "derivative(\"ab\", \"ab\").graphviz(fmt_node=lambda x: str(x))"
    ]
   },
   {
@@ -685,7 +688,7 @@
     }
    ],
    "source": [
-    "(cfg @ derivative('a', 'ab') @ derivative('a', 'ab')).language(10)"
+    "(cfg @ derivative(\"a\", \"ab\") @ derivative(\"a\", \"ab\")).language(10)"
    ]
   },
   {
@@ -709,7 +712,7 @@
     }
    ],
    "source": [
-    "(cfg @ derivative('aa', 'ab')).language(10)"
+    "(cfg @ derivative(\"aa\", \"ab\")).language(10)"
    ]
   },
   {
@@ -745,7 +748,7 @@
     }
    ],
    "source": [
-    "cfg.derivative('a').trim()"
+    "cfg.derivative(\"a\").trim()"
    ]
   },
   {
@@ -775,7 +778,7 @@
     }
    ],
    "source": [
-    "(cfg @ derivative('a', cfg.V)).nullaryremove(binarize=False).unaryremove().trim()"
+    "(cfg @ derivative(\"a\", cfg.V)).nullaryremove(binarize=False).unaryremove().trim()"
    ]
   },
   {
