--- a/notes/Character-at-a-Time.ipynb
+++ b/notes/Character-at-a-Time.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "prompt = 'Hello my name is'\n",
+    "prompt = \"Hello my name is\"\n",
     "pp = llm.p_next(prompt, 10).normalize()\n",
     "pp"
    ]
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pp = llm.p_next('Noam Chomsky famously wrote, \"', 10)"
+    "# pp = llm.p_next('Noam Chomsky famously wrote, \"', 10)"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NextTokenTrie(pp, '<|endoftext|>').root.graphviz(fmt_node=lambda x: f'{x._mass:.3g}', fmt_edge=lambda i,a,j: repr(a))"
+    "# NextTokenTrie(pp, '<|endoftext|>').root.graphviz(fmt_node=lambda x: f'{x._mass:.3g}', fmt_edge=lambda i,a,j: repr(a))"
    ]
   },
   {
@@ -113,8 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#have = {x for x in llm._decode if len(x) == 1}\n",
-    "#want = {y for x in llm._decode for y in x}"
+    "# have = {x for x in llm._decode if len(x) == 1}\n",
+    "# want = {y for x in llm._decode for y in x}"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#want - have"
+    "# want - have"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# create a character-level trie for the next token given the prompt\n",
-    "#NextTokenTrie(pp).show()"
+    "# NextTokenTrie(pp).show()"
    ]
   },
   {
@@ -145,11 +145,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcfg = CFGLM(locally_normalize(LarkStuff(r\"\"\"\n",
+    "pcfg = CFGLM(\n",
+    "    locally_normalize(\n",
+    "        LarkStuff(\n",
+    "            r\"\"\"\n",
     "\n",
     "start: /[ ]*(|Mr\\.[ ]|Dr\\.[ ])Tim(othy)?[ ](|Fabbri[ ])Vieira(|,[ ]Ph\\.D\\.)/\n",
     "\n",
-    "\"\"\").char_cfg(.99), tol=1e-100))"
+    "\"\"\"\n",
+    "        ).char_cfg(0.99),\n",
+    "        tol=1e-100,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -167,7 +174,7 @@
     }
    ],
    "source": [
-    "print(repr(''.join(pcfg.sample())))"
+    "print(repr(\"\".join(pcfg.sample())))"
    ]
   },
   {
@@ -199,7 +206,7 @@
     "tracer = TraceSWOR()\n",
     "for _ in range(1):\n",
     "    with tracer:\n",
-    "        print('----------------------------------')\n",
+    "        print(\"----------------------------------\")\n",
     "        ys = token_trie_approx.sample(prompt, max_tokens=50, draw=tracer, verbosity=1)\n",
     "        print(ys)"
    ]
@@ -1478,7 +1485,9 @@
     }
    ],
    "source": [
-    "tracer.root.graphviz(fmt_node=lambda x: f'{x._mass:.3g}', fmt_edge=lambda i,a,j: repr(a))"
+    "tracer.root.graphviz(\n",
+    "    fmt_node=lambda x: f\"{x._mass:.3g}\", fmt_edge=lambda i, a, j: repr(a)\n",
+    ")"
    ]
   },
   {
@@ -1496,7 +1505,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fruit = CFGLM(locally_normalize(LarkStuff(r\"\"\"\n",
+    "fruit = CFGLM(\n",
+    "    locally_normalize(\n",
+    "        LarkStuff(\n",
+    "            r\"\"\"\n",
     "start: (|\" \") sentence\n",
     "\n",
     "sentence: noun verb noun        \n",
@@ -1511,7 +1523,11 @@
     "VERB: \"like\" | \"flies\"\n",
     "ADJ: \"fruit\"\n",
     "\n",
-    "\"\"\").char_cfg(.99, ignore='[ ]?'), tol=1e-100))"
+    "\"\"\"\n",
+    "        ).char_cfg(0.99, ignore=\"[ ]?\"),\n",
+    "        tol=1e-100,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -1532,7 +1548,7 @@
     }
    ],
    "source": [
-    "''.join(fruit.sample())"
+    "\"\".join(fruit.sample())"
    ]
   },
   {
@@ -1542,7 +1558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fruit.cfg.language(20).project(lambda x: ''.join(x))"
+    "# fruit.cfg.language(20).project(lambda x: ''.join(x))"
    ]
   },
   {
@@ -1563,7 +1579,7 @@
     }
    ],
    "source": [
-    "fruit('fruit flies like a banana ' + EOS)"
+    "fruit(\"fruit flies like a banana \" + EOS)"
    ]
   },
   {
@@ -1583,12 +1599,12 @@
     }
    ],
    "source": [
-    "prompt = 'The following is a favorite sentence among linguists:'\n",
+    "prompt = \"The following is a favorite sentence among linguists:\"\n",
     "token_trie_approx = TokenTrieApproximation(llm, fruit)\n",
     "tracer = TraceSWOR()\n",
     "for _ in range(1):\n",
     "    with tracer:\n",
-    "        print('----------------------------------')\n",
+    "        print(\"----------------------------------\")\n",
     "        ys = token_trie_approx.sample(prompt, max_tokens=50, draw=tracer)\n",
     "        print(ys)"
    ]
