--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -32,7 +32,15 @@
     "from genparse import CFG, FST, EPSILON, Float, CFGLM, add_EOS, prefix_transducer\n",
     "from genparse.cfglm import locally_normalize, EOS, pcfg_check, explode, add_EOS\n",
     "from genparse.align import CharAlignedCFGLM\n",
-    "from genparse.util import LarkStuff, hf_tokenizer, about, show_grammar, normalize, display_table, bpe2term_approx\n",
+    "from genparse.util import (\n",
+    "    LarkStuff,\n",
+    "    hf_tokenizer,\n",
+    "    about,\n",
+    "    show_grammar,\n",
+    "    normalize,\n",
+    "    display_table,\n",
+    "    bpe2term_approx,\n",
+    ")\n",
     "from genparse.inference import TraceSWOR\n",
     "from genparse.steer import generation_tree"
    ]
@@ -52,14 +60,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lark_stuff = LarkStuff(r\"\"\"\n",
+    "lark_stuff = LarkStuff(\n",
+    "    r\"\"\"\n",
     "\n",
     "start: NAME\n",
     "\n",
     "NAME: /(a|b)*c/\n",
     "\n",
-    "\"\"\")\n",
-    "foo = lark_stuff.char_cfg(decay=.1)\n",
+    "\"\"\"\n",
+    ")\n",
+    "foo = lark_stuff.char_cfg(decay=0.1)\n",
     "foo = locally_normalize(foo)\n",
     "assert len(foo.trim()) > 0\n",
     "pcfg_check(foo)"
@@ -134,8 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#b2c = H.fst.prune_to_alphabet(None, foo.V | {''}).renumber\n",
-    "#about(b2c)"
+    "# b2c = H.fst.prune_to_alphabet(None, foo.V | {''}).renumber\n",
+    "# about(b2c)"
    ]
   },
   {
@@ -145,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b2c = H.fst.prune_to_alphabet(None, foo.V | {''}).renumber"
+    "b2c = H.fst.prune_to_alphabet(None, foo.V | {\"\"}).renumber"
    ]
   },
   {
@@ -164,10 +174,10 @@
    "outputs": [],
    "source": [
     "for x in foo.cnf.language(3):\n",
-    "    display(HTML('<hr/>'))\n",
+    "    display(HTML(\"<hr/>\"))\n",
     "    print(x)\n",
     "    bpe_x = b2c(None, x).epsremove.trim\n",
-    "    print('total weight of BPE sequences (i.e., ambiguity):', bpe_x.total_weight())\n",
+    "    print(\"total weight of BPE sequences (i.e., ambiguity):\", bpe_x.total_weight())\n",
     "    display(bpe_x)\n",
     "    print()"
    ]
@@ -200,9 +210,13 @@
    "outputs": [],
    "source": [
     "c = Float.chart()\n",
-    "for x, w, in tmp.cnf.language(5).items():\n",
-    "    y =  H.tokenizer.decode(x)\n",
-    "    if len(y) > L: continue    \n",
+    "for (\n",
+    "    x,\n",
+    "    w,\n",
+    ") in tmp.cnf.language(5).items():\n",
+    "    y = H.tokenizer.decode(x)\n",
+    "    if len(y) > L:\n",
+    "        continue\n",
     "    c[y] += w"
    ]
   },
@@ -236,10 +250,11 @@
    "outputs": [],
    "source": [
     "cc = Float.chart()\n",
-    "for x, w in foo.cnf.language(L+2).items():\n",
-    "    if len(x) > L: continue\n",
-    "    cc[''.join(x)] += w\n",
-    "#cc"
+    "for x, w in foo.cnf.language(L + 2).items():\n",
+    "    if len(x) > L:\n",
+    "        continue\n",
+    "    cc[\"\".join(x)] += w\n",
+    "# cc"
    ]
   },
   {
@@ -259,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cc.metric(c)"
+    "# cc.metric(c)"
    ]
   },
   {
@@ -269,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tmp.trim(bottomup_only=True)"
+    "# tmp.trim(bottomup_only=True)"
    ]
   },
   {
@@ -279,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#show_grammar(tmp, showzero=True)"
+    "# show_grammar(tmp, showzero=True)"
    ]
   },
   {
@@ -289,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(tmp.agenda().__str__(style_value=lambda k, v: (colors.light.red % v) if v > 1.000001 or v < 0 else v))"
+    "# print(tmp.agenda().__str__(style_value=lambda k, v: (colors.light.red % v) if v > 1.000001 or v < 0 else v))"
    ]
   },
   {
@@ -299,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for q in c2t.states:      \n",
+    "# for q in c2t.states:\n",
     "#    for (a,b), r, w in c2t.arcs(q):\n",
     "#        print(f'--{a or \"ε\"}:{b or \"ε\"}/{w}-->', r)"
    ]
@@ -311,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#{x: v for x,v in tmp.agenda().items() if v > 1.001 or v < 0}"
+    "# {x: v for x,v in tmp.agenda().items() if v > 1.001 or v < 0}"
    ]
   },
   {
@@ -321,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#len(tmp.N - tmp.agenda(tol=1e-40, maxiter=np.inf).trim().keys()), len(tmp.N), len(tmp.agenda(tol=1e-40).trim())"
+    "# len(tmp.N - tmp.agenda(tol=1e-40, maxiter=np.inf).trim().keys()), len(tmp.N), len(tmp.agenda(tol=1e-40).trim())"
    ]
   },
   {
@@ -331,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tmp.cnf.language(4)"
+    "# tmp.cnf.language(4)"
    ]
   },
   {
@@ -341,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#show_grammar(tmp)"
+    "# show_grammar(tmp)"
    ]
   },
   {
@@ -372,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lm2.sample(verbose=1)"
+    "# lm2.sample(verbose=1)"
    ]
   },
   {
@@ -382,8 +397,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#context = (64,65,6485,39305)\n",
-    "context = (64,65,6485,)"
+    "# context = (64,65,6485,39305)\n",
+    "context = (\n",
+    "    64,\n",
+    "    65,\n",
+    "    6485,\n",
+    ")"
    ]
   },
   {
@@ -407,7 +426,7 @@
     "df = []\n",
     "for x, w in sorted(normalize(lm2.p_next(context)).items(), key=lambda kv: -kv[1]):\n",
     "    df.append((x, (H.tokenizer.decode([x]) if x != EOS else EOS), w))\n",
-    "pd.DataFrame(df, columns=['token_id', 'chars', 'prob']).set_index('token_id')"
+    "pd.DataFrame(df, columns=[\"token_id\", \"chars\", \"prob\"]).set_index(\"token_id\")"
    ]
   },
   {
@@ -443,7 +462,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lark_stuff = LarkStuff(r\"\"\"\n",
+    "lark_stuff = LarkStuff(\n",
+    "    r\"\"\"\n",
     "\n",
     "start: \"SELECT\" WS STAR WS \"FROM\" WS NAME WS EOS\n",
     "\n",
@@ -452,7 +472,8 @@
     "STAR: \"*\"\n",
     "WS: /[ ]/\n",
     "\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -462,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo = lark_stuff.char_cfg(.1)"
+    "foo = lark_stuff.char_cfg(0.1)"
    ]
   },
   {
@@ -472,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#foo['NAME'].trim().agenda()"
+    "# foo['NAME'].trim().agenda()"
    ]
   },
   {
@@ -482,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#foo.agenda()"
+    "# foo.agenda()"
    ]
   },
   {
@@ -503,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#foo"
+    "# foo"
    ]
   },
   {
@@ -525,9 +546,9 @@
    "source": [
     "trace = TraceSWOR()\n",
     "for _ in range(15):\n",
-    "   print('mass=', trace.root.mass)\n",
-    "   with trace:\n",
-    "       print(''.join(lm.sample(draw=trace)))"
+    "    print(\"mass=\", trace.root.mass)\n",
+    "    with trace:\n",
+    "        print(\"\".join(lm.sample(draw=trace)))"
    ]
   },
   {
@@ -555,7 +576,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c2t = lark_stuff.transducer(ignore='', decay=.0125); len(c2t.states)"
+    "c2t = lark_stuff.transducer(ignore=\"\", decay=0.0125)\n",
+    "len(c2t.states)"
    ]
   },
   {
@@ -573,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 'SELECT * FROM data'"
+    "x = \"SELECT * FROM data\""
    ]
   },
   {
@@ -601,7 +623,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ambig = (FST.from_string(x, Float) @ c2t).trim.project(1).epsremove.trim.to_cfg().cnf.language(15)"
+    "ambig = (\n",
+    "    (FST.from_string(x, Float) @ c2t)\n",
+    "    .trim.project(1)\n",
+    "    .epsremove.trim.to_cfg()\n",
+    "    .cnf.language(15)\n",
+    ")"
    ]
   },
   {
@@ -611,7 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ambig"
+    "# ambig"
    ]
   },
   {
@@ -630,8 +657,9 @@
    "outputs": [],
    "source": [
     "for y in ambig:\n",
-    "    v = cfg.prefix_weight(y)   # show all options with a nonzero prefix weight\n",
-    "    if v == 0: continue\n",
+    "    v = cfg.prefix_weight(y)  # show all options with a nonzero prefix weight\n",
+    "    if v == 0:\n",
+    "        continue\n",
     "    print(v, y)"
    ]
   },
@@ -642,7 +670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#((FST.from_string('SELECT', Float) @ c2t) @ P.T @ cfg).trim().cnf.language(15)"
+    "# ((FST.from_string('SELECT', Float) @ c2t) @ P.T @ cfg).trim().cnf.language(15)"
    ]
   },
   {
@@ -652,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#(P.T @ cfg).trim().cnf.language(100)"
+    "# (P.T @ cfg).trim().cnf.language(100)"
    ]
   },
   {
@@ -683,7 +711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg_t('SELECT * FROM data </s>')"
+    "cfg_t(\"SELECT * FROM data </s>\")"
    ]
   },
   {
@@ -693,7 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg_t('SELECT * FROM data </s>')"
+    "cfg_t(\"SELECT * FROM data </s>\")"
    ]
   },
   {
@@ -714,7 +742,7 @@
    "outputs": [],
    "source": [
     "for _ in range(10):\n",
-    "    print(''.join(lm.sample()))"
+    "    print(\"\".join(lm.sample()))"
    ]
   },
   {
@@ -724,7 +752,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm.p_next('SELECT * FROM ')"
+    "lm.p_next(\"SELECT * FROM \")"
    ]
   },
   {
@@ -772,7 +800,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 'SELECT * FROM data'\n",
+    "x = \"SELECT * FROM data\"\n",
     "b = tokenizer.encode(x)\n",
     "b"
    ]
@@ -794,7 +822,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with timeit('composition'):\n",
+    "with timeit(\"composition\"):\n",
     "    c = FST.from_string(tuple(b), Float) @ b2c\n",
     "about(c)"
    ]
@@ -851,7 +879,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = x = 'SELECT * FROM data'"
+    "x = x = \"SELECT * FROM data\""
    ]
   },
   {
@@ -861,9 +889,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with timeit('composition'):\n",
+    "with timeit(\"composition\"):\n",
     "    bs = b2c @ FST.from_string(x, Float)\n",
-    "with timeit('trim'):\n",
+    "with timeit(\"trim\"):\n",
     "    bs.trim\n",
     "about(bs)"
    ]
@@ -875,7 +903,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#bs.trim"
+    "# bs.trim"
    ]
   },
   {
@@ -921,7 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for y in bs.trim.project(0).epsremove.trim.to_cfg().language(10):\n",
+    "# for y in bs.trim.project(0).epsremove.trim.to_cfg().language(10):\n",
     "#    print(tokenizer.decode(y), y)"
    ]
   },
@@ -956,7 +984,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lark_stuff = LarkStuff(r\"\"\"\n",
+    "lark_stuff = LarkStuff(\n",
+    "    r\"\"\"\n",
     "start: \"SELECT\" WS select_expr WS \"FROM\" WS from_expr [WS \"WHERE\" WS bool_condition] [WS \"GROUP BY\" WS var_list] [WS \"ORDER BY\" WS orderby_expr] WS EOS\n",
     "EOS: \"</s>\"\n",
     "select_expr: STAR | select_list\n",
@@ -972,9 +1001,10 @@
     "STAR: \"*\"\n",
     "NUMBER: /\\d+/\n",
     "WS: \" \"\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "foo = lark_stuff.char_cfg(.7)\n",
+    "foo = lark_stuff.char_cfg(0.7)\n",
     "foo = locally_normalize(foo, tol=1e-100).trim()\n",
     "assert len(foo) > 0\n",
     "lm = CFGLM(foo)"
@@ -995,7 +1025,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(''.join(lm.sample()))"
+    "print(\"\".join(lm.sample()))"
    ]
   },
   {
@@ -1023,7 +1053,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bpe_lm = CharAlignedCFGLM(lm=lm, words={x for _, x in H.pairs}, eos=H.tokenizer.eos_token)"
+    "bpe_lm = CharAlignedCFGLM(\n",
+    "    lm=lm, words={x for _, x in H.pairs}, eos=H.tokenizer.eos_token\n",
+    ")"
    ]
   },
   {
@@ -1033,7 +1065,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm.p_next('')"
+    "lm.p_next(\"\")"
    ]
   },
   {
@@ -1051,7 +1083,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bpe_lm.p_next('')"
+    "bpe_lm.p_next(\"\")"
    ]
   },
   {
@@ -1061,7 +1093,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm.p_next('SELECT ')"
+    "lm.p_next(\"SELECT \")"
    ]
   },
   {
@@ -1071,7 +1103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bpe_lm.p_next('SELECT ')"
+    "bpe_lm.p_next(\"SELECT \")"
    ]
   },
   {
