--- a/notes/Inference-Playground.ipynb
+++ b/notes/Inference-Playground.ipynb
@@ -55,7 +55,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd, numpy as np\n",
-    "import nest_asyncio; nest_asyncio.apply()\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
     "from genparse import CFGLM, Float\n",
     "from genparse.util import display_table\n",
     "from genparse.steer import run, BruteForceGlobalProductOfExperts"
@@ -87,29 +89,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm1 = CFGLM.from_string(\"\"\"\n",
+    "lm1 = CFGLM.from_string(\n",
+    "    \"\"\"\n",
     "\n",
     "0.45: S -> a S a\n",
     "0.45: S -> b S b\n",
     "0.1: S ->\n",
     "\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "lm2 = CFGLM.from_string(\"\"\"\n",
+    "lm2 = CFGLM.from_string(\n",
+    "    \"\"\"\n",
     "\n",
     "0.5: S -> a b S\n",
     "0.5: S ->\n",
     "\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
     "# strings of just a's (with a geometric decay on length)\n",
-    "lm2 = CFGLM.from_string(\"\"\"\n",
+    "lm2 = CFGLM.from_string(\n",
+    "    \"\"\"\n",
     "\n",
     "20: S -> a a a a a a\n",
     "1: S -> a a\n",
     "1: S ->\n",
     "\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -134,7 +142,7 @@
    ],
    "source": [
     "ref = BruteForceGlobalProductOfExperts(lm1, lm2, MAX_LENGTH)\n",
-    "ref.target.project(''.join)"
+    "ref.target.project(\"\".join)"
    ]
   },
   {
@@ -155,10 +163,10 @@
     "particles = run(\n",
     "    lm1,\n",
     "    lm2,\n",
-    "    MAX_LENGTH = MAX_LENGTH,\n",
-    "    n_particles = N_PARTICLES,\n",
-    "    METHOD = 'is',\n",
-    "    #METHOD = 'smc',    \n",
+    "    MAX_LENGTH=MAX_LENGTH,\n",
+    "    n_particles=N_PARTICLES,\n",
+    "    METHOD=\"is\",\n",
+    "    # METHOD = 'smc',\n",
     ")"
    ]
   },
@@ -250,7 +258,9 @@
     }
    ],
    "source": [
-    "w.project(''.join).trim().compare(ref.target.project(''.join).trim()).sort_values('key', ascending=False)"
+    "w.project(\"\".join).trim().compare(ref.target.project(\"\".join).trim()).sort_values(\n",
+    "    \"key\", ascending=False\n",
+    ")"
    ]
   },
   {
@@ -315,10 +325,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# truncate the reference distribution to the support set of the sample; \n",
+    "# truncate the reference distribution to the support set of the sample;\n",
     "# renamed the keys to handle the minor discrepancy in the EOS symbol\n",
     "tmp = ref.target.filter(lambda k: k[:-1] in R).normalize().sort()\n",
-    "tmp.project(lambda k: k[:-1]).compare(R).sort_values('key')"
+    "tmp.project(lambda k: k[:-1]).compare(R).sort_values(\"key\")"
    ]
   },
   {
