--- a/notes/LM-Fun.ipynb
+++ b/notes/LM-Fun.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Counter(tokenizer.decode([k]) for k in range(tokenizer.vocab_size)).most_common(20)"
+    "# Counter(tokenizer.decode([k]) for k in range(tokenizer.vocab_size)).most_common(20)"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm([0,1,2])"
+    "lm([0, 1, 2])"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm.p_next([0,1,2])"
+    "lm.p_next([0, 1, 2])"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm.p_next([0,1,2,3])"
+    "lm.p_next([0, 1, 2, 3])"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = GreedilyTokenizedLLM('gpt2').p_next('Once upon a time,')"
+    "p = GreedilyTokenizedLLM(\"gpt2\").p_next(\"Once upon a time,\")"
    ]
   },
   {
@@ -108,7 +108,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = GreedilyTokenizedLLM('gpt2').p_next('The following is some code that implements quick sort in Python:')"
+    "p = GreedilyTokenizedLLM(\"gpt2\").p_next(\n",
+    "    \"The following is some code that implements quick sort in Python:\"\n",
+    ")"
    ]
   },
   {
@@ -144,8 +146,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M = GreedilyTokenizedLLM('gpt2')\n",
-    "#.p_terminal('The following is some code that implements quick sort in Python:')"
+    "M = GreedilyTokenizedLLM(\"gpt2\")\n",
+    "# .p_terminal('The following is some code that implements quick sort in Python:')"
    ]
   },
   {
@@ -158,15 +160,19 @@
     "class Particle:\n",
     "    def __init__(self, xs):\n",
     "        self.xs = xs\n",
+    "\n",
     "    def __eq__(self, other):\n",
     "        return isinstance(other, Particle) and self.xs == other.xs\n",
+    "\n",
     "    def __hash__(self):\n",
     "        return hash(self.xs)\n",
+    "\n",
     "    def __repr__(self):\n",
-    "        return f'{self.xs}'\n",
+    "        return f\"{self.xs}\"\n",
+    "\n",
     "    def p(self):\n",
     "        P = M.p_next(self.xs)\n",
-    "        return Particles({Particle(self.xs + x): w for x, w in P.items()})        "
+    "        return Particles({Particle(self.xs + x): w for x, w in P.items()})"
    ]
   },
   {
@@ -179,11 +185,13 @@
     "class Particles(dict):\n",
     "    def __repr__(self):\n",
     "        return repr(Counter(self).most_common(10))\n",
+    "\n",
     "    def sample(self):\n",
-    "        ks, ws = np.array(list(self.keys())), np.array(list(self.values()))        \n",
-    "        #ws[np.argsort(-ws)[50:]] = 0\n",
-    "#        return ks[sample(softmax(ws))]\n",
+    "        ks, ws = np.array(list(self.keys())), np.array(list(self.values()))\n",
+    "        # ws[np.argsort(-ws)[50:]] = 0\n",
+    "        #        return ks[sample(softmax(ws))]\n",
     "        return ks[sample(ws)]\n",
+    "\n",
     "    def greedy(self):\n",
     "        ks, ws = list(self.keys()), np.array(list(self.values()))\n",
     "        return ks[ws.argmax()]"
@@ -204,9 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Particle('The following is some code that implements the quick sort algorithm in Python:')\\\n",
-    ".p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()\\\n",
-    ".p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()"
+    "Particle(\n",
+    "    \"The following is some code that implements the quick sort algorithm in Python:\"\n",
+    ").p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()"
    ]
   },
   {
@@ -216,9 +224,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Particle('Once upon a time')\\\n",
-    ".p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()\\\n",
-    ".p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()"
+    "Particle(\n",
+    "    \"Once upon a time\"\n",
+    ").p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()"
    ]
   },
   {
@@ -236,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = Particle('Once upon a time,')"
+    "p = Particle(\"Once upon a time,\")"
    ]
   },
   {
@@ -266,10 +274,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(p.p().greedy().p().greedy().p().greedy().p().greedy().p().greedy().p().greedy()\n",
-    " .p().greedy().p().greedy().p().greedy().p().greedy().p().greedy().p().greedy()\n",
-    "# .p().greedy().p().greedy().p().greedy().p().greedy().p().greedy().p().greedy()\n",
-    "# .p().greedy().p().greedy().p().greedy().p().greedy().p().greedy().p().greedy()\n",
+    "(\n",
+    "    p.p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    .p()\n",
+    "    .greedy()\n",
+    "    # .p().greedy().p().greedy().p().greedy().p().greedy().p().greedy().p().greedy()\n",
+    "    # .p().greedy().p().greedy().p().greedy().p().greedy().p().greedy().p().greedy()\n",
     ")"
    ]
   },
