--- a/notes/Lark-Interface.ipynb
+++ b/notes/Lark-Interface.ipynb
@@ -155,11 +155,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intern = Integerizer()   # rename nonterminals to integers\n",
+    "intern = Integerizer()  # rename nonterminals to integers\n",
     "g = lark_stuff.convert()\n",
     "g = g.rename(intern)\n",
-    "assert g.in_cnf()    # lark returns a grammar in CNF\n",
-    "#g = g.cnf"
+    "assert g.in_cnf()  # lark returns a grammar in CNF\n",
+    "# g = g.cnf"
    ]
   },
   {
@@ -199,10 +199,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from newton.linking import LinkAnalysis\n",
-    "#f = Integerizer()\n",
-    "#links = LinkAnalysis(g.rename(f))\n",
-    "#links.dfs"
+    "# from newton.linking import LinkAnalysis\n",
+    "# f = Integerizer()\n",
+    "# links = LinkAnalysis(g.rename(f))\n",
+    "# links.dfs"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#g.language(6)"
+    "# g.language(6)"
    ]
   },
   {
@@ -266,7 +266,7 @@
     "text = \"12 + 24 - 36 * 48 / 60 SELECT table.name AS thing WHERE table.potato IS NOT 'banana'\"\n",
     "\n",
     "for x, y in lark_stuff.simple_tokenizer(text):\n",
-    "    print(f'{x:15s} -> {y!r}')"
+    "    print(f\"{x:15s} -> {y!r}\")"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = 'SELECT name FROM data </s>'"
+    "text = \"SELECT name FROM data </s>\""
    ]
   },
   {
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lark_stuff.instance.parse(text)"
+    "# lark_stuff.instance.parse(text)"
    ]
   },
   {
@@ -331,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lark_stuff.parser.parse(tokens, 'start')"
+    "lark_stuff.parser.parse(tokens, \"start\")"
    ]
   },
   {
@@ -397,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for e in m.arcs(): print(e)"
+    "# for e in m.arcs(): print(e)"
    ]
   },
   {
@@ -423,7 +423,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(g.cnf.rules), len(g.cnf.prefix_grammar.trim().rules), len(g.cnf.prefix_grammar.trim().rules)/len(g.cnf.rules)"
+    "len(g.cnf.rules), len(g.cnf.prefix_grammar.trim().rules), len(\n",
+    "    g.cnf.prefix_grammar.trim().rules\n",
+    ") / len(g.cnf.rules)"
    ]
   },
   {
@@ -433,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#N = G.nullaryremove()    # could be faster with SCC-based prioritization"
+    "# N = G.nullaryremove()    # could be faster with SCC-based prioritization"
    ]
   },
   {
