--- a/notes/SegTokenAligner.ipynb
+++ b/notes/SegTokenAligner.ipynb
@@ -31,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg = CFG.from_string(\"\"\"\n",
+    "cfg = CFG.from_string(\n",
+    "    \"\"\"\n",
     "\n",
     "1: S -> A A A A\n",
     "1: A -> a \n",
@@ -39,7 +40,9 @@
     "1: A -> b\n",
     "1: A -> bb\n",
     "\n",
-    "\"\"\", Real)"
+    "\"\"\",\n",
+    "    Real,\n",
+    ")"
    ]
   },
   {
@@ -94,7 +97,7 @@
     }
    ],
    "source": [
-    "prefix = 'aa#a#a#'\n",
+    "prefix = \"aa#a#a#\"\n",
     "display(char_lm.p_next(prefix))\n",
     "display(pullback(char_lm, prefix))"
    ]
@@ -106,7 +109,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg1 = add_EOS(CFG.from_string(\"\"\"\n",
+    "cfg1 = add_EOS(\n",
+    "    CFG.from_string(\n",
+    "        \"\"\"\n",
     "\n",
     ".8: S -> A S\n",
     ".2: S ->\n",
@@ -118,7 +123,10 @@
     ".1: A -> hates\n",
     ".2: A -> loves\n",
     "\n",
-    "\"\"\", Real))"
+    "\"\"\",\n",
+    "        Real,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -254,14 +262,19 @@
     }
    ],
    "source": [
-    "cfg2 = add_EOS(CFG.from_string(\"\"\"\n",
+    "cfg2 = add_EOS(\n",
+    "    CFG.from_string(\n",
+    "        \"\"\"\n",
     "\n",
     "0.25: S -> john loves jo\n",
     "0.25: S -> jo hates jonathan\n",
     "0.25: S -> jo loves johnny\n",
     "0.25: S -> nathan loves nathan\n",
     "\n",
-    "\"\"\", Real))\n",
+    "\"\"\",\n",
+    "        Real,\n",
+    "    )\n",
+    ")\n",
     "cfg2"
    ]
   },
@@ -391,7 +404,10 @@
     }
    ],
    "source": [
-    "align.char_char_sync(char_lm1, char_lm2,)"
+    "align.char_char_sync(\n",
+    "    char_lm1,\n",
+    "    char_lm2,\n",
+    ")"
    ]
   },
   {
@@ -1407,7 +1423,7 @@
     "while tracer.root.mass > 0:\n",
     "    with tracer:\n",
     "        got = align.string_char_sync(lm1, char_lm2, draw=tracer)\n",
-    "#    display(tracer.root.graphviz())\n",
+    "    #    display(tracer.root.graphviz())\n",
     "    print(got)\n",
     "    samples.append(got)"
    ]
@@ -1667,7 +1683,7 @@
     }
    ],
    "source": [
-    "tracer.root.graphviz(fmt_node=lambda x: f'{x.mass}/{x._mass:.2g}')"
+    "tracer.root.graphviz(fmt_node=lambda x: f\"{x.mass}/{x._mass:.2g}\")"
    ]
   },
   {
