--- a/notes/Segmentation-PFST.ipynb
+++ b/notes/Segmentation-PFST.ipynb
@@ -35,7 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse.segmentation import segmentation_pfst as construction, fmt, run_segmentation_test\n",
+    "from genparse.segmentation import (\n",
+    "    segmentation_pfst as construction,\n",
+    "    fmt,\n",
+    "    run_segmentation_test,\n",
+    ")\n",
     "from IPython.display import HTML"
    ]
   },
@@ -46,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contexts = {'a', 'b', 'c', 'ab', 'abc'}\n",
-    "alphabet = set('abc')"
+    "contexts = {\"a\", \"b\", \"c\", \"ab\", \"abc\"}\n",
+    "alphabet = set(\"abc\")"
    ]
   },
   {
@@ -253,8 +257,8 @@
    "outputs": [],
    "source": [
     "test_strings = [\n",
-    "    'aba',\n",
-    "    'ab',\n",
+    "    \"aba\",\n",
+    "    \"ab\",\n",
     "    #'aa',\n",
     "    #'acab',\n",
     "    #'abc',\n",
@@ -473,8 +477,8 @@
    ],
    "source": [
     "C = cc\n",
-    "for x in test_strings:    \n",
-    "    display(HTML(f'<hr/><h3>{x}</h3>'))\n",
+    "for x in test_strings:\n",
+    "    display(HTML(f\"<hr/><h3>{x}</h3>\"))\n",
     "    run_segmentation_test(C, x, contexts, verbose=2)"
    ]
   },
@@ -721,8 +725,8 @@
     }
    ],
    "source": [
-    "for x in test_strings:    \n",
-    "    display(HTML(f'<hr/><h3>{x}</h3>'))\n",
+    "for x in test_strings:\n",
+    "    display(HTML(f\"<hr/><h3>{x}</h3>\"))\n",
     "    run_segmentation_test(canonical, x, contexts, verbose=1)"
    ]
   },
@@ -964,8 +968,8 @@
     }
    ],
    "source": [
-    "contexts = {'a', 'b', 'c', 'abc'}   # not prefix closed!\n",
-    "alphabet = set('abc')\n",
+    "contexts = {\"a\", \"b\", \"c\", \"abc\"}  # not prefix closed!\n",
+    "alphabet = set(\"abc\")\n",
     "cc = construction(contexts, alphabet, canonical=True)\n",
     "cc.graphviz(fmt_node=fmt)"
    ]
@@ -1018,8 +1022,8 @@
     }
    ],
    "source": [
-    "for x in test_strings:    \n",
-    "    display(HTML(f'<hr/><h3>{x}</h3>'))\n",
+    "for x in test_strings:\n",
+    "    display(HTML(f\"<hr/><h3>{x}</h3>\"))\n",
     "    run_segmentation_test(cc, x, contexts, verbose=1)"
    ]
   },
