--- a/notes/Token-Alignment.ipynb
+++ b/notes/Token-Alignment.ipynb
@@ -66,17 +66,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = CFGLM.from_string(\"\"\"\n",
+    "p = CFGLM.from_string(\n",
+    "    \"\"\"\n",
     "\n",
     "1: S -> a\n",
     "1: S -> a a\n",
     "2: S -> a a a\n",
     "\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
     "A = p.cfg.V\n",
-    "B = {'a','aa','aaa', EOS}\n",
-    "ϕ = lambda b: ''.join(b).strip(EOS)"
+    "B = {\"a\", \"aa\", \"aaa\", EOS}\n",
+    "ϕ = lambda b: \"\".join(b).strip(EOS)"
    ]
   },
   {
@@ -250,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T('aaa', None).epsremove.trim"
+    "T(\"aaa\", None).epsremove.trim"
    ]
   },
   {
@@ -260,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T('aaa', None).total_weight()"
+    "T(\"aaa\", None).total_weight()"
    ]
   },
   {
@@ -311,8 +313,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_table([[p.cfg.language(100).project(ϕ), generation_tree(graft).D, PL]], \n",
-    "              headings=['target', 'grafting-heuristic', 'composition'])"
+    "display_table(\n",
+    "    [[p.cfg.language(100).project(ϕ), generation_tree(graft).D, PL]],\n",
+    "    headings=[\"target\", \"grafting-heuristic\", \"composition\"],\n",
+    ")"
    ]
   },
   {
@@ -350,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pb_lm = CFGLM(locally_normalize((p.cfg @ PT).trim()).trim())\n",
+    "# pb_lm = CFGLM(locally_normalize((p.cfg @ PT).trim()).trim())\n",
     "pb_lm = CFGLM((p.cfg @ PT).trim())"
    ]
   },
@@ -382,7 +386,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "L_PB.assert_equal(p.cfg.language(100).project(ϕ))   # character-level distribution matches!"
+    "L_PB.assert_equal(\n",
+    "    p.cfg.language(100).project(ϕ)\n",
+    ")  # character-level distribution matches!"
    ]
   },
   {
@@ -392,8 +398,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_table([[p.cfg.language(100).project(ϕ), L_PB, generation_tree(graft).D, PL]], \n",
-    "              headings=['target', 'pfst', 'grafting-heuristic', 'composition'])"
+    "display_table(\n",
+    "    [[p.cfg.language(100).project(ϕ), L_PB, generation_tree(graft).D, PL]],\n",
+    "    headings=[\"target\", \"pfst\", \"grafting-heuristic\", \"composition\"],\n",
+    ")"
    ]
   },
   {
