--- a/notes/grammar_processing_issues.ipynb
+++ b/notes/grammar_processing_issues.ipynb
@@ -20,7 +20,9 @@
    "source": [
     "import sys\n",
     "import getpass\n",
-    "if getpass.getuser() == \"benjamin.lebrun\": sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")"
+    "\n",
+    "if getpass.getuser() == \"benjamin.lebrun\":\n",
+    "    sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")"
    ]
   },
   {
@@ -52,11 +54,13 @@
     }
    ],
    "source": [
-    "cfg = LarkStuff(open(\"../benchmark/grammars/sql_case_sensitive.lark\").read()).char_cfg(.99, ignore='[ ]?')\n",
+    "cfg = LarkStuff(open(\"../benchmark/grammars/sql_case_sensitive.lark\").read()).char_cfg(\n",
+    "    0.99, ignore=\"[ ]?\"\n",
+    ")\n",
     "cfg = locally_normalize(cfg, tol=1e-40, maxiter=np.inf)\n",
     "\n",
-    "with timeit('boolean EarleyCFGLM preprocessing'):\n",
-    "    guide = EarleyBoolMaskCFGLM(cfg) # should take forever\n"
+    "with timeit(\"boolean EarleyCFGLM preprocessing\"):\n",
+    "    guide = EarleyBoolMaskCFGLM(cfg)  # should take forever"
    ]
   },
   {
@@ -81,16 +85,20 @@
     "from genparse.lm import LM\n",
     "from genparse import EOS, add_EOS, Boolean, Float\n",
     "\n",
+    "\n",
     "class EarleyBoolMaskCFGLM2(LM):\n",
     "    \"LM-like interface for Boolean-masking CFG models; uses Earley's algorithm for inference.\"\n",
     "\n",
     "    def __init__(self, cfg):\n",
     "        from genparse.experimental.earley import Earley\n",
-    "        if EOS not in cfg.V: cfg = add_EOS(cfg)\n",
+    "\n",
+    "        if EOS not in cfg.V:\n",
+    "            cfg = add_EOS(cfg)\n",
     "        cfg = cfg.nullaryremove(binarize=True).unarycycleremove().renumber()\n",
-    "        if cfg.R != Boolean: cfg = cfg.map_values(lambda x: Boolean(x>0), Boolean)\n",
+    "        if cfg.R != Boolean:\n",
+    "            cfg = cfg.map_values(lambda x: Boolean(x > 0), Boolean)\n",
     "        self.model = Earley(cfg.prefix_grammar)\n",
-    "        super().__init__(eos = EOS, V = cfg.V)\n",
+    "        super().__init__(eos=EOS, V=cfg.V)\n",
     "\n",
     "    def p_next(self, context):\n",
     "        p = self.model.p_next(context).trim()\n",
@@ -98,7 +106,7 @@
     "\n",
     "    def __call__(self, context):\n",
     "        assert context[-1] == EOS\n",
-    "        return float(self.model(context) != Boolean.zero)\n"
+    "        return float(self.model(context) != Boolean.zero)"
    ]
   },
   {
@@ -118,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guide.p_next(\"\") "
+    "guide.p_next(\"\")"
    ]
   }
  ],
