--- a/notes/hfppl.ipynb
+++ b/notes/hfppl.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the language model. \n",
+    "# Load the language model.\n",
     "# Mistral and Vicuna are open models; to use a model with restricted access, like LLaMA 2,\n",
     "# pass your HuggingFace API key as the optional `auth_token` argument:\n",
     "# LLM = CachedCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-hf\", auth_token=os.environ['HF_AUTH_TOKEN'])\n",
@@ -105,7 +105,7 @@
    ],
    "source": [
     "LLM = CachedCausalLM.from_pretrained(MODEL_ID, load_in_8bit=True)\n",
-    "#LLM.batch_size = 10"
+    "# LLM.batch_size = 10"
    ]
   },
   {
@@ -123,7 +123,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL_ID, use_fast=True, prefix_token=None, middle_token=None, suffix_token=None, eot_token=None, fill_token=None)"
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    MODEL_ID,\n",
+    "    use_fast=True,\n",
+    "    prefix_token=None,\n",
+    "    middle_token=None,\n",
+    "    suffix_token=None,\n",
+    "    eot_token=None,\n",
+    "    fill_token=None,\n",
+    ")"
    ]
   },
   {
@@ -148,7 +156,7 @@
     "Q: Write a SQL query that shows individuals' vote and zipcode, ordered from lowest to highest age.\n",
     "A: SELECT vote, zipcode, age FROM data ORDER BY age ASC </s>\n",
     "Q: Write a SQL query that returns white voters' average age for each state color.\n",
-    "A:\"\"\" "
+    "A:\"\"\""
    ]
   },
   {
@@ -158,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#LLM.cache_kv(LLM.tokenizer.encode(prompt))"
+    "# LLM.cache_kv(LLM.tokenizer.encode(prompt))"
    ]
   },
   {
@@ -168,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = prompt+\" SELECT state_color\""
+    "context = prompt + \" SELECT state_color\""
    ]
   },
   {
@@ -191,13 +199,16 @@
     "from genparse import Boolean, EOS, add_EOS\n",
     "from genparse import Float\n",
     "\n",
+    "\n",
     "class GreedilyTokenizedLLM:\n",
     "\n",
     "    def __init__(self, llm, tokenizer):\n",
     "        self.tokenizer = tokenizer\n",
     "        self._model = llm\n",
     "\n",
-    "        self._decode = [self.tokenizer.decode([i]) for i in range(self.tokenizer.vocab_size)]\n",
+    "        self._decode = [\n",
+    "            self.tokenizer.decode([i]) for i in range(self.tokenizer.vocab_size)\n",
+    "        ]\n",
     "        self.V = set(self._decode)\n",
     "        self.eos = self.tokenizer.eos_token\n",
     "\n",
@@ -224,7 +235,7 @@
     "        if top is None:\n",
     "            return pp\n",
     "        else:\n",
-    "            return pp.normalize()\n"
+    "            return pp.normalize()"
    ]
   },
   {
@@ -251,6 +262,7 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()"
    ]
   },
@@ -316,7 +328,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guide = EarleyBoolMaskCFGLM(LarkStuff(r\"\"\"\n",
+    "guide = EarleyBoolMaskCFGLM(\n",
+    "    LarkStuff(\n",
+    "        r\"\"\"\n",
     "start: WS? \"SELECT\" WS select_expr WS \"FROM\" WS from_expr [WS \"WHERE\" WS bool_condition] [WS \"GROUP BY\" WS var_list] [WS \"ORDER BY\" WS orderby_expr] WS EOS\n",
     "EOS: \"</s>\"\n",
     "select_expr: STAR | select_list\n",
@@ -333,7 +347,9 @@
     "NUMBER: /\\d+/\n",
     "WS: /[ \\n]/\n",
     "\n",
-    "\"\"\").char_cfg(.99, ignore='[ ]?'))"
+    "\"\"\"\n",
+    "    ).char_cfg(0.99, ignore=\"[ ]?\")\n",
+    ")"
    ]
   },
   {
@@ -466,7 +482,10 @@
     }
    ],
    "source": [
-    "guide(\"\"\"SELECT state_color, AVG(age) FROM data WHERE race_ethnicity = 'white' GROUP BY state_color </s>\"\"\" + guide.eos)"
+    "guide(\n",
+    "    \"\"\"SELECT state_color, AVG(age) FROM data WHERE race_ethnicity = 'white' GROUP BY state_color </s>\"\"\"\n",
+    "    + guide.eos\n",
+    ")"
    ]
   },
   {
@@ -481,15 +500,15 @@
     "        super().__init__()\n",
     "        self.context = LMContext(LLM, prompt)\n",
     "        self.max_tokens = max_tokens\n",
-    "        \n",
+    "\n",
     "    async def step(self):\n",
     "        logprobs = self.context.next_token_logprobs.copy()\n",
-    "        proposal = TokenCategorical(LLM, logprobs)     \n",
-    "        \n",
+    "        proposal = TokenCategorical(LLM, logprobs)\n",
+    "\n",
     "        token = await self.sample(self.context.next_token(), proposal=proposal)\n",
     "        self.score(logprobs[token.token_id])\n",
     "        self.max_tokens -= 1\n",
-    "        \n",
+    "\n",
     "        # Check if done\n",
     "        if token == LLM.tokenizer.eos_token_id or self.max_tokens == 0:\n",
     "            self.finish()\n",
@@ -564,7 +583,7 @@
     }
    ],
    "source": [
-    "print(f'{sum(len(p.context.tokens) for p in particles)/took:.2f} tokens/sec')"
+    "print(f\"{sum(len(p.context.tokens) for p in particles)/took:.2f} tokens/sec\")"
    ]
   },
   {
