--- a/notes/hfppl_benleb.ipynb
+++ b/notes/hfppl_benleb.ipynb
@@ -36,6 +36,7 @@
     "    print(\"HF cache set; path updated\")\n",
     "\n",
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()"
    ]
   },
@@ -100,7 +101,9 @@
    "source": [
     "from genparse.lm import AsyncGreedilyTokenizedLLM\n",
     "\n",
-    "genparse_llm = AsyncGreedilyTokenizedLLM.from_name(\"codellama/CodeLlama-7b-Instruct-hf\", batch_size=40)"
+    "genparse_llm = AsyncGreedilyTokenizedLLM.from_name(\n",
+    "    \"codellama/CodeLlama-7b-Instruct-hf\", batch_size=40\n",
+    ")"
    ]
   },
   {
@@ -113,7 +116,9 @@
     "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
     "from genparse.util import LarkStuff\n",
     "\n",
-    "guide = EarleyBoolMaskCFGLM(LarkStuff(very_restricted_sql).char_cfg(.99, ignore='[ ]?'))"
+    "guide = EarleyBoolMaskCFGLM(\n",
+    "    LarkStuff(very_restricted_sql).char_cfg(0.99, ignore=\"[ ]?\")\n",
+    ")"
    ]
   },
   {
@@ -370,12 +375,12 @@
    ],
    "source": [
     "particle_approx = sampler.run_inference(\n",
-    "    prompt = prompt,\n",
-    "    proposal = proposal,\n",
-    "    method = \"smc-standard\",\n",
-    "    n_particles = 5,\n",
-    "    max_tokens = 50,\n",
-    "    verbosity = 1\n",
+    "    prompt=prompt,\n",
+    "    proposal=proposal,\n",
+    "    method=\"smc-standard\",\n",
+    "    n_particles=5,\n",
+    "    max_tokens=50,\n",
+    "    verbosity=1,\n",
     ")"
    ]
   },
