--- a/notes/sql_debug.ipynb
+++ b/notes/sql_debug.ipynb
@@ -20,7 +20,9 @@
    "source": [
     "import sys\n",
     "import getpass\n",
-    "if getpass.getuser() == \"benjamin.lebrun\": sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")"
+    "\n",
+    "if getpass.getuser() == \"benjamin.lebrun\":\n",
+    "    sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")"
    ]
   },
   {
@@ -42,7 +44,8 @@
    "outputs": [],
    "source": [
     "from genparse.evaluation.dataset import Dataset\n",
-    "dataset = Dataset(\"spider\", 'validation')"
+    "\n",
+    "dataset = Dataset(\"spider\", \"validation\")"
    ]
   },
   {
@@ -54,7 +57,7 @@
    "source": [
     "cfg = LarkStuff(\n",
     "    open(\"../benchmark/grammars/sql_case_insensitive.lark\").read()\n",
-    ").char_cfg(.99, ignore='[ ]?')\n",
+    ").char_cfg(0.99, ignore=\"[ ]?\")\n",
     "guide = EarleyBoolMaskCFGLM(cfg)"
    ]
   },
@@ -79,7 +82,9 @@
     }
    ],
    "source": [
-    "guide.p_next(\"select document_name , template_id from documents where document_description like '%\")"
+    "guide.p_next(\n",
+    "    \"select document_name , template_id from documents where document_description like '%\"\n",
+    ")"
    ]
   }
  ],
