--- a/notes/hfppl_for_tim_o.ipynb
+++ b/notes/hfppl_for_tim_o.ipynb
@@ -42,8 +42,10 @@
     "import os\n",
     "import getpass\n",
     "\n",
-    "if getpass.getuser() == \"benjamin.lebrun\": # change to your user if you want to set these\n",
-    "    # @TIMO you may need to set this to your local genparse repo \n",
+    "if (\n",
+    "    getpass.getuser() == \"benjamin.lebrun\"\n",
+    "):  # change to your user if you want to set these\n",
+    "    # @TIMO you may need to set this to your local genparse repo\n",
     "    sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")\n",
     "    # @TIMO also set your cache IF you run into disk quota issues\n",
     "    os.environ[\"HF_HOME\"] = os.path.join(os.environ[\"SCRATCH\"], \"hf_cache\")\n",
@@ -65,7 +67,7 @@
     }
    ],
    "source": [
-    "from hfppl import Model, CachedCausalLM, LMContext #, smc_standard, smc_steer\n",
+    "from hfppl import Model, CachedCausalLM, LMContext  # , smc_standard, smc_steer\n",
     "from transformers import AutoTokenizer"
    ]
   },
@@ -87,13 +89,13 @@
     "MODEL_ID = \"codellama/CodeLlama-7b-Instruct-hf\"\n",
     "hfppl_llm = CachedCausalLM.from_pretrained(MODEL_ID, load_in_8bit=True)\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    MODEL_ID, \n",
+    "    MODEL_ID,\n",
     "    use_fast=True,\n",
-    "    prefix_token=None, \n",
-    "    middle_token=None, \n",
-    "    suffix_token=None, \n",
-    "    eot_token=None, \n",
-    "    fill_token=None\n",
+    "    prefix_token=None,\n",
+    "    middle_token=None,\n",
+    "    suffix_token=None,\n",
+    "    eot_token=None,\n",
+    "    fill_token=None,\n",
     ")"
    ]
   },
@@ -104,7 +106,7 @@
    "outputs": [],
    "source": [
     "import genparse\n",
-    "from genparse.cfglm import EarleyBoolMaskCFGLM \n",
+    "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
     "from genparse.util import LarkStuff\n",
     "from genparse import EOS, Float\n",
     "from genparse.proposal import CharacterProposal\n",
@@ -156,7 +158,7 @@
     "            WS: /[ ]/\n",
     "\n",
     "        \"\"\"\n",
-    "    ).char_cfg(.99, ignore='[ ]?')\n",
+    "    ).char_cfg(0.99, ignore=\"[ ]?\")\n",
     ")"
    ]
   },
@@ -169,6 +171,7 @@
     "import numpy as np\n",
     "import asyncio\n",
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()"
    ]
   },
@@ -180,22 +183,25 @@
    "source": [
     "from genparse import Float\n",
     "\n",
+    "\n",
     "class SteeringModel(Model):\n",
     "    def __init__(self, llm, guide, proposal, prompt, max_tokens, compare_time=False):\n",
     "        super().__init__()\n",
-    "        self.llm = llm # AsyncGreedilyTokenizedLM\n",
-    "        self.guide = guide # PCFGLM\n",
+    "        self.llm = llm  # AsyncGreedilyTokenizedLM\n",
+    "        self.guide = guide  # PCFGLM\n",
     "        self.prompt = prompt\n",
     "        self.context = []\n",
-    "        self.proposal = proposal # CharacterProposal\n",
+    "        self.proposal = proposal  # CharacterProposal\n",
     "        self.max_tokens = max_tokens\n",
     "        self.compare_time = compare_time\n",
     "\n",
     "    async def step(self):\n",
-    "        (token, llm_prob, guide_prob, proposal_prob) = await self.proposal.sample_next_token(\n",
-    "            context=''.join(self.context), \n",
-    "            prompt=self.prompt, \n",
-    "            compare_time=self.compare_time\n",
+    "        (token, llm_prob, guide_prob, proposal_prob) = (\n",
+    "            await self.proposal.sample_next_token(\n",
+    "                context=\"\".join(self.context),\n",
+    "                prompt=self.prompt,\n",
+    "                compare_time=self.compare_time,\n",
+    "            )\n",
     "        )\n",
     "        self.context.append(token)\n",
     "        self.weight += np.log(llm_prob) + np.log(guide_prob) - np.log(proposal_prob)\n",
@@ -206,10 +212,10 @@
     "        if token == self.llm.eos or self.max_tokens == 0 or token == genparse.EOS:\n",
     "            self.finish()\n",
     "            return\n",
-    "        \n",
+    "\n",
     "    def immutable_properties(self):\n",
-    "        return ['llm', 'prompt', 'guide', 'compare_token']\n",
-    "    \n",
+    "        return [\"llm\", \"prompt\", \"guide\", \"compare_token\"]\n",
+    "\n",
     "    def __repr__(self):\n",
     "        return f\"`{'' if not self.context else self.context[-1]}` : {''.join(self.context)} : {self.weight}\""
    ]
@@ -703,9 +709,7 @@
     }
    ],
    "source": [
-    "particles = asyncio.run(\n",
-    "    smc_standard(steering_model, n_particles=10)\n",
-    ")"
+    "particles = asyncio.run(smc_standard(steering_model, n_particles=10))"
    ]
   }
  ],
